load("@rules_android//android:rules.bzl", "android_binary")
load("@rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")

kt_android_library(
    name = "app_lib",
    srcs = glob(["src/main/java/**/*.kt"]),
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(
        ["src/main/res/**"],
        exclude = ["src/main/res/mipmap-anydpi/**"]
    ),
    deps = [
        "//core/model:core_lib_model",
        "//core/network:core_lib_network",
        "//core/ui:core_lib_ui",

        "//feature/feat1:feature_lib_1",
        "//feature/feat2:feature_lib_2",
        "//feature/feat3:feature_lib_3",
        "//feature/feat4:feature_lib_4",
        "//feature/feat5:feature_lib_5",
        "//feature/feat6:feature_lib_6",
        "//feature/feat7:feature_lib_7",
        "//feature/feat8:feature_lib_8",
        "//feature/feat9:feature_lib_9",
        "//feature/feat10:feature_lib_10",
        "//feature/feat11:feature_lib_11",
        "//feature/feat12:feature_lib_12",
        "//feature/feat13:feature_lib_13",
        "//feature/feat14:feature_lib_14",
        "//feature/feat15:feature_lib_15",
        "//feature/feat16:feature_lib_16",
        "//feature/feat17:feature_lib_17",
        "//feature/feat18:feature_lib_18",
        "//feature/feat19:feature_lib_19",
        "//feature/feat20:feature_lib_20",
        "//feature/feat21:feature_lib_21",
        "//feature/feat22:feature_lib_22",
        "//feature/feat23:feature_lib_23",
        "//feature/feat24:feature_lib_24",
        "//feature/feat25:feature_lib_25",
        "//feature/feat26:feature_lib_26",
        "//feature/feat27:feature_lib_27",
        "//feature/feat28:feature_lib_28",
        "//feature/feat29:feature_lib_29",
        "//feature/feat30:feature_lib_30",
        "//feature/feat31:feature_lib_31",
        "//feature/feat32:feature_lib_32",
        "//feature/feat33:feature_lib_33",
        "//feature/feat34:feature_lib_34",
        "//feature/feat35:feature_lib_35",
        "//feature/feat36:feature_lib_36",
        "//feature/feat37:feature_lib_37",
        "//feature/feat38:feature_lib_38",
        "//feature/feat39:feature_lib_39",
        "//feature/feat40:feature_lib_40",
        "//feature/feat41:feature_lib_41",
        "//feature/feat42:feature_lib_42",
        "//feature/feat43:feature_lib_43",
        "//feature/feat44:feature_lib_44",
        "//feature/feat45:feature_lib_45",
        "//feature/feat46:feature_lib_46",
        "//feature/feat47:feature_lib_47",
        "//feature/feat48:feature_lib_48",
        "//feature/feat49:feature_lib_49",
        "//feature/feat50:feature_lib_50",
        "//feature/feat51:feature_lib_51",
        "//feature/feat52:feature_lib_52",
        "//feature/feat53:feature_lib_53",
        "//feature/feat54:feature_lib_54",
        "//feature/feat55:feature_lib_55",
        "//feature/feat56:feature_lib_56",
        "//feature/feat57:feature_lib_57",
        "//feature/feat58:feature_lib_58",
        "//feature/feat59:feature_lib_59",
        "//feature/feat60:feature_lib_60",
        "//feature/feat61:feature_lib_61",
        "//feature/feat62:feature_lib_62",
        "//feature/feat63:feature_lib_63",
        "//feature/feat64:feature_lib_64",
        "//feature/feat65:feature_lib_65",
        "//feature/feat66:feature_lib_66",
        "//feature/feat67:feature_lib_67",
        "//feature/feat68:feature_lib_68",
        "//feature/feat69:feature_lib_69",
        "//feature/feat70:feature_lib_70",
        "//feature/feat71:feature_lib_71",
        "//feature/feat72:feature_lib_72",
        "//feature/feat73:feature_lib_73",
        "//feature/feat74:feature_lib_74",
        "//feature/feat75:feature_lib_75",
        "//feature/feat76:feature_lib_76",
        "//feature/feat77:feature_lib_77",
        "//feature/feat78:feature_lib_78",
        "//feature/feat79:feature_lib_79",
        "//feature/feat80:feature_lib_80",
        "//feature/feat81:feature_lib_81",
        "//feature/feat82:feature_lib_82",
        "//feature/feat83:feature_lib_83",
        "//feature/feat84:feature_lib_84",
        "//feature/feat85:feature_lib_85",
        "//feature/feat86:feature_lib_86",
        "//feature/feat87:feature_lib_87",
        "//feature/feat88:feature_lib_88",
        "//feature/feat89:feature_lib_89",
        "//feature/feat90:feature_lib_90",
        "//feature/feat91:feature_lib_91",
        "//feature/feat92:feature_lib_92",
        "//feature/feat93:feature_lib_93",
        "//feature/feat94:feature_lib_94",
        "//feature/feat95:feature_lib_95",
        "//feature/feat96:feature_lib_96",
        "//feature/feat97:feature_lib_97",
        "//feature/feat98:feature_lib_98",
        "//feature/feat99:feature_lib_99",
        "//feature/feat100:feature_lib_100",
        "//feature/feat101:feature_lib_101",
        "//feature/feat102:feature_lib_102",
        "//feature/feat103:feature_lib_103",
        "//feature/feat104:feature_lib_104",
        "//feature/feat105:feature_lib_105",
        "//feature/feat106:feature_lib_106",
        "//feature/feat107:feature_lib_107",
        "//feature/feat108:feature_lib_108",
        "//feature/feat109:feature_lib_109",
        "//feature/feat110:feature_lib_110",
        "//feature/feat111:feature_lib_111",
        "//feature/feat112:feature_lib_112",
        "//feature/feat113:feature_lib_113",
        "//feature/feat114:feature_lib_114",
        "//feature/feat115:feature_lib_115",
        "//feature/feat116:feature_lib_116",
        "//feature/feat117:feature_lib_117",
        "//feature/feat118:feature_lib_118",
        "//feature/feat119:feature_lib_119",
        "//feature/feat120:feature_lib_120",
        "//feature/feat121:feature_lib_121",
        "//feature/feat122:feature_lib_122",
        "//feature/feat123:feature_lib_123",
        "//feature/feat124:feature_lib_124",
        "//feature/feat125:feature_lib_125",
        "//feature/feat126:feature_lib_126",
        "//feature/feat127:feature_lib_127",
        "//feature/feat128:feature_lib_128",
        "//feature/feat129:feature_lib_129",
        "//feature/feat130:feature_lib_130",
        "//feature/feat131:feature_lib_131",
        "//feature/feat132:feature_lib_132",
        "//feature/feat133:feature_lib_133",
        "//feature/feat134:feature_lib_134",
        "//feature/feat135:feature_lib_135",
        "//feature/feat136:feature_lib_136",
        "//feature/feat137:feature_lib_137",
        "//feature/feat138:feature_lib_138",
        "//feature/feat139:feature_lib_139",
        "//feature/feat140:feature_lib_140",
        "//feature/feat141:feature_lib_141",
        "//feature/feat142:feature_lib_142",
        "//feature/feat143:feature_lib_143",
        "//feature/feat144:feature_lib_144",
        "//feature/feat145:feature_lib_145",
        "//feature/feat146:feature_lib_146",
        "//feature/feat147:feature_lib_147",
        "//feature/feat148:feature_lib_148",
        "//feature/feat149:feature_lib_149",
        "//feature/feat150:feature_lib_150",
        "//feature/feat151:feature_lib_151",
        "//feature/feat152:feature_lib_152",
        "//feature/feat153:feature_lib_153",
        "//feature/feat154:feature_lib_154",
        "//feature/feat155:feature_lib_155",
        "//feature/feat156:feature_lib_156",
        "//feature/feat157:feature_lib_157",
        "//feature/feat158:feature_lib_158",
        "//feature/feat159:feature_lib_159",
        "//feature/feat160:feature_lib_160",
        "//feature/feat161:feature_lib_161",
        "//feature/feat162:feature_lib_162",
        "//feature/feat163:feature_lib_163",
        "//feature/feat164:feature_lib_164",
        "//feature/feat165:feature_lib_165",
        "//feature/feat166:feature_lib_166",
        "//feature/feat167:feature_lib_167",
        "//feature/feat168:feature_lib_168",
        "//feature/feat169:feature_lib_169",
        "//feature/feat170:feature_lib_170",
        "//feature/feat171:feature_lib_171",
        "//feature/feat172:feature_lib_172",
        "//feature/feat173:feature_lib_173",
        "//feature/feat174:feature_lib_174",
        "//feature/feat175:feature_lib_175",
        "//feature/feat176:feature_lib_176",
        "//feature/feat177:feature_lib_177",
        "//feature/feat178:feature_lib_178",
        "//feature/feat179:feature_lib_179",
        "//feature/feat180:feature_lib_180",
        "//feature/feat181:feature_lib_181",
        "//feature/feat182:feature_lib_182",
        "//feature/feat183:feature_lib_183",
        "//feature/feat184:feature_lib_184",
        "//feature/feat185:feature_lib_185",
        "//feature/feat186:feature_lib_186",
        "//feature/feat187:feature_lib_187",
        "//feature/feat188:feature_lib_188",
        "//feature/feat189:feature_lib_189",
        "//feature/feat190:feature_lib_190",
        "//feature/feat191:feature_lib_191",
        "//feature/feat192:feature_lib_192",
        "//feature/feat193:feature_lib_193",
        "//feature/feat194:feature_lib_194",
        "//feature/feat195:feature_lib_195",
        "//feature/feat196:feature_lib_196",
        "//feature/feat197:feature_lib_197",
        "//feature/feat198:feature_lib_198",
        "//feature/feat199:feature_lib_199",
        "//feature/feat200:feature_lib_200",
        "//feature/feat201:feature_lib_201",
        "//feature/feat202:feature_lib_202",
        "//feature/feat203:feature_lib_203",
        "//feature/feat204:feature_lib_204",
        "//feature/feat205:feature_lib_205",
        "//feature/feat206:feature_lib_206",
        "//feature/feat207:feature_lib_207",
        "//feature/feat208:feature_lib_208",
        "//feature/feat209:feature_lib_209",
        "//feature/feat210:feature_lib_210",
        "//feature/feat211:feature_lib_211",
        "//feature/feat212:feature_lib_212",
        "//feature/feat213:feature_lib_213",
        "//feature/feat214:feature_lib_214",
        "//feature/feat215:feature_lib_215",
        "//feature/feat216:feature_lib_216",
        "//feature/feat217:feature_lib_217",
        "//feature/feat218:feature_lib_218",
        "//feature/feat219:feature_lib_219",
        "//feature/feat220:feature_lib_220",
        "//feature/feat221:feature_lib_221",
        "//feature/feat222:feature_lib_222",
        "//feature/feat223:feature_lib_223",
        "//feature/feat224:feature_lib_224",
        "//feature/feat225:feature_lib_225",
        "//feature/feat226:feature_lib_226",
        "//feature/feat227:feature_lib_227",
        "//feature/feat228:feature_lib_228",
        "//feature/feat229:feature_lib_229",
        "//feature/feat230:feature_lib_230",
        "//feature/feat231:feature_lib_231",
        "//feature/feat232:feature_lib_232",
        "//feature/feat233:feature_lib_233",
        "//feature/feat234:feature_lib_234",
        "//feature/feat235:feature_lib_235",
        "//feature/feat236:feature_lib_236",
        "//feature/feat237:feature_lib_237",
        "//feature/feat238:feature_lib_238",
        "//feature/feat239:feature_lib_239",
        "//feature/feat240:feature_lib_240",
        "//feature/feat241:feature_lib_241",
        "//feature/feat242:feature_lib_242",
        "//feature/feat243:feature_lib_243",
        "//feature/feat244:feature_lib_244",
        "//feature/feat245:feature_lib_245",
        "//feature/feat246:feature_lib_246",
        "//feature/feat247:feature_lib_247",
        "//feature/feat248:feature_lib_248",
        "//feature/feat249:feature_lib_249",
        "//feature/feat250:feature_lib_250",
        "//feature/feat251:feature_lib_251",
        "//feature/feat252:feature_lib_252",
        "//feature/feat253:feature_lib_253",
        "//feature/feat254:feature_lib_254",
        "//feature/feat255:feature_lib_255",
        "//feature/feat256:feature_lib_256",
        "//feature/feat257:feature_lib_257",
        "//feature/feat258:feature_lib_258",
        "//feature/feat259:feature_lib_259",
        "//feature/feat260:feature_lib_260",
        "//feature/feat261:feature_lib_261",
        "//feature/feat262:feature_lib_262",
        "//feature/feat263:feature_lib_263",
        "//feature/feat264:feature_lib_264",
        "//feature/feat265:feature_lib_265",
        "//feature/feat266:feature_lib_266",
        "//feature/feat267:feature_lib_267",
        "//feature/feat268:feature_lib_268",
        "//feature/feat269:feature_lib_269",
        "//feature/feat270:feature_lib_270",
        "//feature/feat271:feature_lib_271",
        "//feature/feat272:feature_lib_272",
        "//feature/feat273:feature_lib_273",
        "//feature/feat274:feature_lib_274",
        "//feature/feat275:feature_lib_275",
        "//feature/feat276:feature_lib_276",
        "//feature/feat277:feature_lib_277",
        "//feature/feat278:feature_lib_278",
        "//feature/feat279:feature_lib_279",
        "//feature/feat280:feature_lib_280",
        "//feature/feat281:feature_lib_281",
        "//feature/feat282:feature_lib_282",
        "//feature/feat283:feature_lib_283",
        "//feature/feat284:feature_lib_284",
        "//feature/feat285:feature_lib_285",
        "//feature/feat286:feature_lib_286",
        "//feature/feat287:feature_lib_287",
        "//feature/feat288:feature_lib_288",
        "//feature/feat289:feature_lib_289",
        "//feature/feat290:feature_lib_290",
        "//feature/feat291:feature_lib_291",
        "//feature/feat292:feature_lib_292",
        "//feature/feat293:feature_lib_293",
        "//feature/feat294:feature_lib_294",
        "//feature/feat295:feature_lib_295",
        "//feature/feat296:feature_lib_296",
        "//feature/feat297:feature_lib_297",
        "//feature/feat298:feature_lib_298",
        "//feature/feat299:feature_lib_299",
        "//feature/feat300:feature_lib_300",
        "//feature/feat301:feature_lib_301",
        "//feature/feat302:feature_lib_302",
        "//feature/feat303:feature_lib_303",
        "//feature/feat304:feature_lib_304",
        "//feature/feat305:feature_lib_305",
        "//feature/feat306:feature_lib_306",
        "//feature/feat307:feature_lib_307",
        "//feature/feat308:feature_lib_308",
        "//feature/feat309:feature_lib_309",
        "//feature/feat310:feature_lib_310",
        "//feature/feat311:feature_lib_311",
        "//feature/feat312:feature_lib_312",
        "//feature/feat313:feature_lib_313",
        "//feature/feat314:feature_lib_314",
        "//feature/feat315:feature_lib_315",
        "//feature/feat316:feature_lib_316",
        "//feature/feat317:feature_lib_317",
        "//feature/feat318:feature_lib_318",
        "//feature/feat319:feature_lib_319",
        "//feature/feat320:feature_lib_320",
        "//feature/feat321:feature_lib_321",
        "//feature/feat322:feature_lib_322",
        "//feature/feat323:feature_lib_323",
        "//feature/feat324:feature_lib_324",
        "//feature/feat325:feature_lib_325",
        "//feature/feat326:feature_lib_326",
        "//feature/feat327:feature_lib_327",
        "//feature/feat328:feature_lib_328",
        "//feature/feat329:feature_lib_329",
        "//feature/feat330:feature_lib_330",
        "//feature/feat331:feature_lib_331",
        "//feature/feat332:feature_lib_332",
        "//feature/feat333:feature_lib_333",
        "//feature/feat334:feature_lib_334",
        "//feature/feat335:feature_lib_335",
        "//feature/feat336:feature_lib_336",
        "//feature/feat337:feature_lib_337",
        "//feature/feat338:feature_lib_338",
        "//feature/feat339:feature_lib_339",
        "//feature/feat340:feature_lib_340",
        "//feature/feat341:feature_lib_341",
        "//feature/feat342:feature_lib_342",
        "//feature/feat343:feature_lib_343",
        "//feature/feat344:feature_lib_344",
        "//feature/feat345:feature_lib_345",
        "//feature/feat346:feature_lib_346",
        "//feature/feat347:feature_lib_347",
        "//feature/feat348:feature_lib_348",
        "//feature/feat349:feature_lib_349",
        "//feature/feat350:feature_lib_350",
        "//feature/feat351:feature_lib_351",
        "//feature/feat352:feature_lib_352",
        "//feature/feat353:feature_lib_353",
        "//feature/feat354:feature_lib_354",
        "//feature/feat355:feature_lib_355",
        "//feature/feat356:feature_lib_356",
        "//feature/feat357:feature_lib_357",
        "//feature/feat358:feature_lib_358",
        "//feature/feat359:feature_lib_359",
        "//feature/feat360:feature_lib_360",
        "//feature/feat361:feature_lib_361",
        "//feature/feat362:feature_lib_362",
        "//feature/feat363:feature_lib_363",
        "//feature/feat364:feature_lib_364",
        "//feature/feat365:feature_lib_365",
        "//feature/feat366:feature_lib_366",
        "//feature/feat367:feature_lib_367",
        "//feature/feat368:feature_lib_368",
        "//feature/feat369:feature_lib_369",
        "//feature/feat370:feature_lib_370",
        "//feature/feat371:feature_lib_371",
        "//feature/feat372:feature_lib_372",
        "//feature/feat373:feature_lib_373",
        "//feature/feat374:feature_lib_374",
        "//feature/feat375:feature_lib_375",
        "//feature/feat376:feature_lib_376",
        "//feature/feat377:feature_lib_377",
        "//feature/feat378:feature_lib_378",
        "//feature/feat379:feature_lib_379",
        "//feature/feat380:feature_lib_380",
        "//feature/feat381:feature_lib_381",
        "//feature/feat382:feature_lib_382",
        "//feature/feat383:feature_lib_383",
        "//feature/feat384:feature_lib_384",
        "//feature/feat385:feature_lib_385",
        "//feature/feat386:feature_lib_386",
        "//feature/feat387:feature_lib_387",
        "//feature/feat388:feature_lib_388",
        "//feature/feat389:feature_lib_389",
        "//feature/feat390:feature_lib_390",
        "//feature/feat391:feature_lib_391",
        "//feature/feat392:feature_lib_392",
        "//feature/feat393:feature_lib_393",
        "//feature/feat394:feature_lib_394",
        "//feature/feat395:feature_lib_395",
        "//feature/feat396:feature_lib_396",
        "//feature/feat397:feature_lib_397",
        "//feature/feat398:feature_lib_398",
        "//feature/feat399:feature_lib_399",
        "//feature/feat400:feature_lib_400",
        "//feature/feat401:feature_lib_401",
        "//feature/feat402:feature_lib_402",
        "//feature/feat403:feature_lib_403",
        "//feature/feat404:feature_lib_404",
        "//feature/feat405:feature_lib_405",
        "//feature/feat406:feature_lib_406",
        "//feature/feat407:feature_lib_407",
        "//feature/feat408:feature_lib_408",
        "//feature/feat409:feature_lib_409",
        "//feature/feat410:feature_lib_410",
        "//feature/feat411:feature_lib_411",
        "//feature/feat412:feature_lib_412",
        "//feature/feat413:feature_lib_413",
        "//feature/feat414:feature_lib_414",
        "//feature/feat415:feature_lib_415",
        "//feature/feat416:feature_lib_416",
        "//feature/feat417:feature_lib_417",
        "//feature/feat418:feature_lib_418",
        "//feature/feat419:feature_lib_419",
        "//feature/feat420:feature_lib_420",
        "//feature/feat421:feature_lib_421",
        "//feature/feat422:feature_lib_422",
        "//feature/feat423:feature_lib_423",
        "//feature/feat424:feature_lib_424",
        "//feature/feat425:feature_lib_425",
        "//feature/feat426:feature_lib_426",
        "//feature/feat427:feature_lib_427",
        "//feature/feat428:feature_lib_428",
        "//feature/feat429:feature_lib_429",
        "//feature/feat430:feature_lib_430",
        "//feature/feat431:feature_lib_431",
        "//feature/feat432:feature_lib_432",
        "//feature/feat433:feature_lib_433",
        "//feature/feat434:feature_lib_434",
        "//feature/feat435:feature_lib_435",
        "//feature/feat436:feature_lib_436",
        "//feature/feat437:feature_lib_437",
        "//feature/feat438:feature_lib_438",
        "//feature/feat439:feature_lib_439",
        "//feature/feat440:feature_lib_440",
        "//feature/feat441:feature_lib_441",
        "//feature/feat442:feature_lib_442",
        "//feature/feat443:feature_lib_443",
        "//feature/feat444:feature_lib_444",
        "//feature/feat445:feature_lib_445",
        "//feature/feat446:feature_lib_446",
        "//feature/feat447:feature_lib_447",
        "//feature/feat448:feature_lib_448",
        "//feature/feat449:feature_lib_449",
        "//feature/feat450:feature_lib_450",
        "//feature/feat451:feature_lib_451",
        "//feature/feat452:feature_lib_452",
        "//feature/feat453:feature_lib_453",
        "//feature/feat454:feature_lib_454",
        "//feature/feat455:feature_lib_455",
        "//feature/feat456:feature_lib_456",
        "//feature/feat457:feature_lib_457",
        "//feature/feat458:feature_lib_458",
        "//feature/feat459:feature_lib_459",
        "//feature/feat460:feature_lib_460",
        "//feature/feat461:feature_lib_461",
        "//feature/feat462:feature_lib_462",
        "//feature/feat463:feature_lib_463",
        "//feature/feat464:feature_lib_464",
        "//feature/feat465:feature_lib_465",
        "//feature/feat466:feature_lib_466",
        "//feature/feat467:feature_lib_467",
        "//feature/feat468:feature_lib_468",
        "//feature/feat469:feature_lib_469",
        "//feature/feat470:feature_lib_470",
        "//feature/feat471:feature_lib_471",
        "//feature/feat472:feature_lib_472",
        "//feature/feat473:feature_lib_473",
        "//feature/feat474:feature_lib_474",
        "//feature/feat475:feature_lib_475",
        "//feature/feat476:feature_lib_476",
        "//feature/feat477:feature_lib_477",
        "//feature/feat478:feature_lib_478",
        "//feature/feat479:feature_lib_479",
        "//feature/feat480:feature_lib_480",
        "//feature/feat481:feature_lib_481",
        "//feature/feat482:feature_lib_482",
        "//feature/feat483:feature_lib_483",
        "//feature/feat484:feature_lib_484",
        "//feature/feat485:feature_lib_485",
        "//feature/feat486:feature_lib_486",
        "//feature/feat487:feature_lib_487",
        "//feature/feat488:feature_lib_488",
        "//feature/feat489:feature_lib_489",
        "//feature/feat490:feature_lib_490",
        "//feature/feat491:feature_lib_491",
        "//feature/feat492:feature_lib_492",
        "//feature/feat493:feature_lib_493",
        "//feature/feat494:feature_lib_494",
        "//feature/feat495:feature_lib_495",
        "//feature/feat496:feature_lib_496",
        "//feature/feat497:feature_lib_497",
        "//feature/feat498:feature_lib_498",
        "//feature/feat499:feature_lib_499",
        "//feature/feat500:feature_lib_500",
        "//feature/feat501:feature_lib_501",
        "//feature/feat502:feature_lib_502",
        "//feature/feat503:feature_lib_503",
        "//feature/feat504:feature_lib_504",
        "//feature/feat505:feature_lib_505",
        "//feature/feat506:feature_lib_506",
        "//feature/feat507:feature_lib_507",
        "//feature/feat508:feature_lib_508",
        "//feature/feat509:feature_lib_509",
        "//feature/feat510:feature_lib_510",
        "//feature/feat511:feature_lib_511",
        "//feature/feat512:feature_lib_512",
        "//feature/feat513:feature_lib_513",
        "//feature/feat514:feature_lib_514",
        "//feature/feat515:feature_lib_515",
        "//feature/feat516:feature_lib_516",
        "//feature/feat517:feature_lib_517",
        "//feature/feat518:feature_lib_518",
        "//feature/feat519:feature_lib_519",
        "//feature/feat520:feature_lib_520",
        "//feature/feat521:feature_lib_521",
        "//feature/feat522:feature_lib_522",
        "//feature/feat523:feature_lib_523",
        "//feature/feat524:feature_lib_524",
        "//feature/feat525:feature_lib_525",
        "//feature/feat526:feature_lib_526",
        "//feature/feat527:feature_lib_527",
        "//feature/feat528:feature_lib_528",
        "//feature/feat529:feature_lib_529",
        "//feature/feat530:feature_lib_530",
        "//feature/feat531:feature_lib_531",
        "//feature/feat532:feature_lib_532",
        "//feature/feat533:feature_lib_533",
        "//feature/feat534:feature_lib_534",
        "//feature/feat535:feature_lib_535",
        "//feature/feat536:feature_lib_536",
        "//feature/feat537:feature_lib_537",
        "//feature/feat538:feature_lib_538",
        "//feature/feat539:feature_lib_539",
        "//feature/feat540:feature_lib_540",
        "//feature/feat541:feature_lib_541",
        "//feature/feat542:feature_lib_542",
        "//feature/feat543:feature_lib_543",
        "//feature/feat544:feature_lib_544",
        "//feature/feat545:feature_lib_545",
        "//feature/feat546:feature_lib_546",
        "//feature/feat547:feature_lib_547",
        "//feature/feat548:feature_lib_548",
        "//feature/feat549:feature_lib_549",
        "//feature/feat550:feature_lib_550",
        "//feature/feat551:feature_lib_551",
        "//feature/feat552:feature_lib_552",
        "//feature/feat553:feature_lib_553",
        "//feature/feat554:feature_lib_554",
        "//feature/feat555:feature_lib_555",
        "//feature/feat556:feature_lib_556",
        "//feature/feat557:feature_lib_557",
        "//feature/feat558:feature_lib_558",
        "//feature/feat559:feature_lib_559",
        "//feature/feat560:feature_lib_560",
        "//feature/feat561:feature_lib_561",
        "//feature/feat562:feature_lib_562",
        "//feature/feat563:feature_lib_563",
        "//feature/feat564:feature_lib_564",
        "//feature/feat565:feature_lib_565",
        "//feature/feat566:feature_lib_566",
        "//feature/feat567:feature_lib_567",
        "//feature/feat568:feature_lib_568",
        "//feature/feat569:feature_lib_569",
        "//feature/feat570:feature_lib_570",
        "//feature/feat571:feature_lib_571",
        "//feature/feat572:feature_lib_572",
        "//feature/feat573:feature_lib_573",
        "//feature/feat574:feature_lib_574",
        "//feature/feat575:feature_lib_575",
        "//feature/feat576:feature_lib_576",
        "//feature/feat577:feature_lib_577",
        "//feature/feat578:feature_lib_578",
        "//feature/feat579:feature_lib_579",
        "//feature/feat580:feature_lib_580",
        "//feature/feat581:feature_lib_581",
        "//feature/feat582:feature_lib_582",
        "//feature/feat583:feature_lib_583",
        "//feature/feat584:feature_lib_584",
        "//feature/feat585:feature_lib_585",
        "//feature/feat586:feature_lib_586",
        "//feature/feat587:feature_lib_587",
        "//feature/feat588:feature_lib_588",
        "//feature/feat589:feature_lib_589",
        "//feature/feat590:feature_lib_590",
        "//feature/feat591:feature_lib_591",
        "//feature/feat592:feature_lib_592",
        "//feature/feat593:feature_lib_593",
        "//feature/feat594:feature_lib_594",
        "//feature/feat595:feature_lib_595",
        "//feature/feat596:feature_lib_596",
        "//feature/feat597:feature_lib_597",
        "//feature/feat598:feature_lib_598",
        "//feature/feat599:feature_lib_599",
        "//feature/feat600:feature_lib_600",
        "//feature/feat601:feature_lib_601",
        "//feature/feat602:feature_lib_602",
        "//feature/feat603:feature_lib_603",
        "//feature/feat604:feature_lib_604",
        "//feature/feat605:feature_lib_605",
        "//feature/feat606:feature_lib_606",
        "//feature/feat607:feature_lib_607",
        "//feature/feat608:feature_lib_608",
        "//feature/feat609:feature_lib_609",
        "//feature/feat610:feature_lib_610",
        "//feature/feat611:feature_lib_611",
        "//feature/feat612:feature_lib_612",
        "//feature/feat613:feature_lib_613",
        "//feature/feat614:feature_lib_614",
        "//feature/feat615:feature_lib_615",
        "//feature/feat616:feature_lib_616",
        "//feature/feat617:feature_lib_617",
        "//feature/feat618:feature_lib_618",
        "//feature/feat619:feature_lib_619",
        "//feature/feat620:feature_lib_620",
        "//feature/feat621:feature_lib_621",
        "//feature/feat622:feature_lib_622",
        "//feature/feat623:feature_lib_623",
        "//feature/feat624:feature_lib_624",
        "//feature/feat625:feature_lib_625",
        "//feature/feat626:feature_lib_626",
        "//feature/feat627:feature_lib_627",
        "//feature/feat628:feature_lib_628",
        "//feature/feat629:feature_lib_629",
        "//feature/feat630:feature_lib_630",
        "//feature/feat631:feature_lib_631",
        "//feature/feat632:feature_lib_632",
        "//feature/feat633:feature_lib_633",
        "//feature/feat634:feature_lib_634",
        "//feature/feat635:feature_lib_635",
        "//feature/feat636:feature_lib_636",
        "//feature/feat637:feature_lib_637",
        "//feature/feat638:feature_lib_638",
        "//feature/feat639:feature_lib_639",
        "//feature/feat640:feature_lib_640",
        "//feature/feat641:feature_lib_641",
        "//feature/feat642:feature_lib_642",
        "//feature/feat643:feature_lib_643",
        "//feature/feat644:feature_lib_644",
        "//feature/feat645:feature_lib_645",
        "//feature/feat646:feature_lib_646",
        "//feature/feat647:feature_lib_647",
        "//feature/feat648:feature_lib_648",
        "//feature/feat649:feature_lib_649",
        "//feature/feat650:feature_lib_650",
        "//feature/feat651:feature_lib_651",
        "//feature/feat652:feature_lib_652",
        "//feature/feat653:feature_lib_653",
        "//feature/feat654:feature_lib_654",
        "//feature/feat655:feature_lib_655",
        "//feature/feat656:feature_lib_656",
        "//feature/feat657:feature_lib_657",
        "//feature/feat658:feature_lib_658",
        "//feature/feat659:feature_lib_659",
        "//feature/feat660:feature_lib_660",
        "//feature/feat661:feature_lib_661",
        "//feature/feat662:feature_lib_662",
        "//feature/feat663:feature_lib_663",
        "//feature/feat664:feature_lib_664",
        "//feature/feat665:feature_lib_665",
        "//feature/feat666:feature_lib_666",
        "//feature/feat667:feature_lib_667",
        "//feature/feat668:feature_lib_668",
        "//feature/feat669:feature_lib_669",
        "//feature/feat670:feature_lib_670",
        "//feature/feat671:feature_lib_671",
        "//feature/feat672:feature_lib_672",
        "//feature/feat673:feature_lib_673",
        "//feature/feat674:feature_lib_674",
        "//feature/feat675:feature_lib_675",
        "//feature/feat676:feature_lib_676",
        "//feature/feat677:feature_lib_677",
        "//feature/feat678:feature_lib_678",
        "//feature/feat679:feature_lib_679",
        "//feature/feat680:feature_lib_680",
        "//feature/feat681:feature_lib_681",
        "//feature/feat682:feature_lib_682",
        "//feature/feat683:feature_lib_683",
        "//feature/feat684:feature_lib_684",
        "//feature/feat685:feature_lib_685",
        "//feature/feat686:feature_lib_686",
        "//feature/feat687:feature_lib_687",
        "//feature/feat688:feature_lib_688",
        "//feature/feat689:feature_lib_689",
        "//feature/feat690:feature_lib_690",
        "//feature/feat691:feature_lib_691",
        "//feature/feat692:feature_lib_692",
        "//feature/feat693:feature_lib_693",
        "//feature/feat694:feature_lib_694",
        "//feature/feat695:feature_lib_695",
        "//feature/feat696:feature_lib_696",
        "//feature/feat697:feature_lib_697",
        "//feature/feat698:feature_lib_698",
        "//feature/feat699:feature_lib_699",
        "//feature/feat700:feature_lib_700",

        "@maven//:androidx_activity_activity_ktx",
        "@maven//:androidx_core_core_ktx",
        "@maven//:androidx_lifecycle_lifecycle_runtime_ktx",
        "@maven//:androidx_concurrent_concurrent_futures",
        "@maven//:com_google_guava_listenablefuture",
        "@maven//:com_google_guava_guava",
    ],
)

android_binary(
    name = "app",
    manifest = "src/main/AndroidManifest.xml",
    deps = [
        ":app_lib",
    ],
    resource_files = glob(
        ["src/main/res/**"],
        exclude = ["src/main/res/mipmap-anydpi/**"]
    ),
    manifest_values = {
        "minSdkVersion": "26",
        "targetSdkVersion": "34",
        "applicationId": "com.romix.build.systems"
    }
)
