load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "core_lib_ui",
    srcs = glob(["src/main/java/**/*.kt"]),
    # manifest = "src/main/AndroidManifest.xml",
    # resource_files = glob(["src/main/res/**"]),
    deps = [
        "//core/model:core_lib_model",

        "@maven//:androidx_activity_activity_ktx",
        "@maven//:androidx_core_core_ktx",
        "@maven//:androidx_lifecycle_lifecycle_runtime_ktx",
        "@maven//:androidx_concurrent_concurrent_futures",
        "@maven//:com_google_guava_listenablefuture",
        "@maven//:com_google_guava_guava",
    ],
    visibility = ["//visibility:public"],
)
